--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "nodemailer-express-handlebars": "^6.1.2",
     "nodemon": "^3.1.4",
-    "whatsapp-web.js": "^1.25.0"
+    "whatsapp-web.js": "^1.25.0",
+    "xlsx": "^0.18.5"
   }
 }
